--- a/index.html
+++ b/index.html
@@ -1,397 +1,170 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
-    <title>Clicker Mini App</title>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Мини-игра с монеткой</title>
     <style>
         body {
-            font-family: sans-serif;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
+            font-family: Arial, sans-serif;
+            text-align: center;
             margin: 0;
+            padding: 20px;
             background-color: #f0f0f0;
         }
-         .tab-buttons {
-          display: flex;
-          justify-content: center;
-          margin-bottom: 20px;
-        }
-        .tab-button {
-          padding: 10px 20px;
-          background-color: #ddd;
-          border: none;
-          border-radius: 5px;
-          cursor: pointer;
-          margin: 0 5px;
-        }
-        .tab-button.active {
-          background-color: #4CAF50;
-          color: white;
-       }
-        .coin {
-            width: 150px;
-            height: 150px;
+
+        #coin {
+            width: 100px;
+            height: 100px;
             background-color: gold;
             border-radius: 50%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            display: inline-block;
+            margin-top: 50px;
             cursor: pointer;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-            transition: transform 0.1s ease;
         }
-        .coin:active {
-            transform: scale(0.95);
-            box-shadow: 0 2px 4px rgba(0,0,0,0.2);
-        }
-        .count {
-            font-size: 3em;
+
+        #clicks {
+            font-size: 24px;
             margin-top: 20px;
         }
-         .limit-display {
-            font-size: 1.2em;
+
+        #clickLimit {
+            font-size: 18px;
             margin-top: 10px;
-             color: #555;
+            color: red;
         }
-        .container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            margin-bottom: 10px;
+
+        #shop {
+            margin-top: 30px;
         }
-        .label {
-           margin-bottom: 10px;
+
+        .button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            cursor: pointer;
+            margin: 10px;
+            font-size: 16px;
         }
-         .shop-container {
-              width: 80%;
-             display: flex;
-              flex-direction: column;
-              align-items: center;
-              margin-bottom: 20px;
+
+        .button:disabled {
+            background-color: #ccc;
         }
-         .shop-item {
-              display: flex;
-              align-items: center;
-             justify-content: space-between;
-              margin-bottom: 10px;
-            width: 100%;
-         }
-         .shop-item button{
-               padding: 8px 16px;
-              background-color: #4CAF50;
-              color: white;
-               border: none;
-              border-radius: 5px;
-               cursor: pointer;
-          }
-         .shop-item button:hover{
-                background-color: #45a049;
-          }
-        .shop-item span {
-          margin-right: 10px;
+
+        #shopInfo {
+            margin-top: 20px;
         }
-        .tab-content{
-           display: none;
-           width: 100%;
-          align-items: center;
-            flex-direction: column;
+
+        #score {
+            margin-top: 20px;
         }
-       .tab-content.active{
-         display: flex;
-       }
+
+        #timer {
+            font-size: 18px;
+            margin-top: 10px;
+        }
     </style>
 </head>
 <body>
-    <div class="tab-buttons">
-         <button class="tab-button active" data-tab="clicker">Кликер</button>
-        <button class="tab-button" data-tab="upgrades">Усилители</button>
-         <button class="tab-button" data-tab="limitupgrades">Лимит</button>
+
+    <h1>Монетка Кликер</h1>
+
+    <div id="coin"></div>
+
+    <div id="clicks">Очки: 0</div>
+    <div id="clickLimit">Клики: 1000</div>
+    <div id="timer">Время до восстановления кликов: 0</div>
+
+    <div id="shop">
+        <button id="clickMultiplierBtn" class="button">Усилитель кликов (цена: 50)</button>
+        <button id="clickCountMultiplierBtn" class="button">Усилитель кол-ва кликов (цена: 100)</button>
     </div>
-      <div id="clicker" class="tab-content active container">
-        <p class = "label">Тапни по монете</p>
-        <div class="coin" id="coin"></div>
-       <div class="count" id="count">0</div>
-         <div class="limit-display" id="limitDisplay"></div>
-    </div>
-        <div id="upgrades" class="tab-content shop-container"></div>
-        <div id="limitupgrades" class="tab-content shop-container"></div>
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+
+    <div id="shopInfo"></div>
+    <div id="score"></div>
+
     <script>
-        const tg = window.Telegram.WebApp;
-        tg.ready();
-        let count = 0;
+        let clicks = 0;
         let clickLimit = 1000;
-        let currentClicks = 1000;
         let clickMultiplier = 1;
-        const coin = document.getElementById('coin');
-        const countDisplay = document.getElementById('count');
-        const limitDisplay = document.getElementById('limitDisplay');
-         let isSaving = false;
-         const SERVER_URL = 'YOUR_SERVER_URL'; // Замените на URL вашего сервера
-         let sendQueue = []; // Очередь для tg.sendData
-       const tabButtons = document.querySelectorAll('.tab-button');
-       const tabContents = document.querySelectorAll('.tab-content');
-       const upgradesContainer = document.getElementById('upgrades');
-        const limitUpgradesContainer = document.getElementById('limitupgrades');
-       const clickerTab = document.getElementById('clicker');
+        let clickCountMultiplier = 1;
+        let timeLeft = 0;
 
-        let upgrades = [
-             { id: 1, name: 'Усилитель 1x2', cost: 10, multiplier: 2 , bought: false},
-           { id: 2, name: 'Усилитель 2x2', cost: 20, multiplier: 2, bought: false },
-           { id: 3, name: 'Усилитель 3x2', cost: 40, multiplier: 2, bought: false },
-          { id: 4, name: 'Усилитель 4x2', cost: 80, multiplier: 2, bought: false },
-          { id: 5, name: 'Усилитель 5x2', cost: 160, multiplier: 2, bought: false }
-       ];
-        let limitUpgrades = [
-          { id: 1, name: 'Лимит 1x2', cost: 100, multiplier: 2 , bought: false},
-          { id: 2, name: 'Лимит 2x2', cost: 200, multiplier: 2, bought: false },
-          { id: 3, name: 'Лимит 3x2', cost: 400, multiplier: 2, bought: false },
-           { id: 4, name: 'Лимит 4x2', cost: 800, multiplier: 2, bought: false },
-            { id: 5, name: 'Лимит 5x2', cost: 1600, multiplier: 2, bought: false }
-       ];
+        // Цены на усилители
+        let clickMultiplierPrice = 50;
+        let clickCountMultiplierPrice = 100;
 
-     // Загрузка счета из хранилища
-    tg.CloudStorage.getItem('clicker_score', function(err, value){
-          if(err){
-               console.error('Ошибка при загрузке', err);
-          } else {
-              if(value){
-                   count = parseInt(value);
-                  countDisplay.textContent = count;
-             } else{
-                  console.log('Нет сохраненного значения')
-             }
-         }
-    });
-    // Загрузка лимита кликов
-    tg.CloudStorage.getItem('click_limit', function(err, value){
-          if(err){
-             console.error('Ошибка при загрузке', err);
-        } else {
-            if(value){
-                 currentClicks = parseInt(value);
-            } else{
-                 currentClicks = clickLimit; //Устанавливаем лимит, если нету в хранилище
-            }
-               updateLimitDisplay();
-         }
-     });
-      // Загрузка множителя
-       tg.CloudStorage.getItem('click_multiplier', function(err, value){
-          if(err){
-             console.error('Ошибка при загрузке', err);
-          } else {
-            if(value){
-               clickMultiplier = parseInt(value)
-           } else{
-               clickMultiplier = 1
-           }
-         }
-      });
-      // Загрузка покупок
-         tg.CloudStorage.getItem('upgrades_bought', function(err, value){
-            if(err){
-               console.error('Ошибка при загрузке', err);
-             } else {
-                if(value){
-                    upgrades = JSON.parse(value);
-                  }
-             }
-              renderUpgrades();
-         });
-            tg.CloudStorage.getItem('limit_upgrades_bought', function(err, value){
-              if(err){
-                  console.error('Ошибка при загрузке', err);
-             } else {
-                if(value){
-                    limitUpgrades = JSON.parse(value);
-               }
-           }
-              renderLimitUpgrades();
-       });
+        let maxClicks = 1000;
+        let interval;
 
-     async function saveAndSendData(score) {
-        isSaving = true;
-         try {
-             await new Promise((resolve, reject) => {
-                 tg.CloudStorage.setItem('clicker_score', String(score), (err) => {
-                    if (err) {
-                        console.error('Ошибка при сохранении', err);
-                        reject(err);
-                     }
-                   resolve();
-                });
-            });
-            await new Promise((resolve, reject) => {
-                  tg.CloudStorage.setItem('click_limit', String(currentClicks), (err) => {
-                     if (err) {
-                          console.error('Ошибка при сохранении', err);
-                       reject(err);
-                     }
-                   resolve();
-                   });
-               });
-               await new Promise((resolve, reject) => {
-                    tg.CloudStorage.setItem('click_multiplier', String(clickMultiplier), (err) => {
-                       if (err) {
-                            console.error('Ошибка при сохранении', err);
-                           reject(err);
-                       }
-                       resolve();
-                    });
-               });
-                 await new Promise((resolve, reject) => {
-                    tg.CloudStorage.setItem('upgrades_bought', JSON.stringify(upgrades), (err) => {
-                        if (err) {
-                           console.error('Ошибка при сохранении', err);
-                            reject(err);
-                        }
-                        resolve();
-                    });
-                });
-                   await new Promise((resolve, reject) => {
-                    tg.CloudStorage.setItem('limit_upgrades_bought', JSON.stringify(limitUpgrades), (err) => {
-                        if (err) {
-                            console.error('Ошибка при сохранении', err);
-                           reject(err);
-                        }
-                       resolve();
-                   });
-               });
-            const response = await fetch(SERVER_URL, {
-                 method: 'POST',
-                headers: {
-                  'Content-Type': 'application/json',
-                },
-                body: JSON.stringify({ score: score }),
-            });
-             if (!response.ok) {
-                const message = `Error: ${response.status}`;
-               throw new Error(message);
-            }
-             sendQueue.push(score); // Добавить счет в очередь
-
-        } catch(error){
-            console.error("Ошибка при сохранении и отправке: ", error);
-          }finally{
-             isSaving = false;
+        // Сохранение кликов в локальном хранилище
+        if (localStorage.getItem("clicks")) {
+            clicks = parseInt(localStorage.getItem("clicks"));
         }
-    }
-     function updateLimitDisplay() {
-            limitDisplay.textContent = `Клики: ${currentClicks} / ${clickLimit} (+2/сек)`;
+        if (localStorage.getItem("clickLimit")) {
+            clickLimit = parseInt(localStorage.getItem("clickLimit"));
         }
-     coin.addEventListener('click', async () => {
-          if(isSaving) return;
-            if (currentClicks > 0) {
-                count+=clickMultiplier;
-                countDisplay.textContent = count;
-                currentClicks--;
-                updateLimitDisplay();
-               await saveAndSendData(count);
-             } else {
-                 console.log("Нет кликов");
+
+        // Обновление UI
+        function updateUI() {
+            document.getElementById("clicks").innerText = `Очки: ${clicks}`;
+            document.getElementById("clickLimit").innerText = `Клики: ${clickLimit}`;
+            document.getElementById("score").innerText = `Вы можете сделать еще ${clickLimit} кликов.`;
+            document.getElementById("timer").innerText = `Время до восстановления кликов: ${timeLeft}`;
+            document.getElementById("shopInfo").innerText = `Усилитель кликов: ${clickMultiplier}x, Усилитель кол-ва кликов: ${clickCountMultiplier}x`;
+            localStorage.setItem("clicks", clicks);
+            localStorage.setItem("clickLimit", clickLimit);
+        }
+
+        // Запуск восстановления кликов
+        function startClickRestoration() {
+            clearInterval(interval);
+            interval = setInterval(() => {
+                if (clickLimit < maxClicks) {
+                    clickLimit += 1;
+                }
+                timeLeft--;
+                if (timeLeft <= 0) {
+                    timeLeft = 0;
+                }
+                updateUI();
+            }, 1000);
+        }
+
+        // Обработчик клика по монетке
+        document.getElementById("coin").addEventListener("click", () => {
+            if (clickLimit > 0) {
+                clicks += clickCountMultiplier;
+                clickLimit -= 1;
+                updateUI();
+                startClickRestoration();
             }
-      });
-      function processSendQueue() {
-            if (sendQueue.length > 0) {
-                const score = sendQueue.shift();
-               tg.sendData(String(score));
-               console.log('Отправляю счет боту: ', String(score))
-          }
-      }
-        // Отправка данных из очереди по таймеру
-        setInterval(processSendQueue, 1000);
-       setInterval(() => {
-             if (currentClicks < clickLimit) {
-                  currentClicks = Math.min(currentClicks + 2, clickLimit);
-                 updateLimitDisplay();
-                  tg.CloudStorage.setItem('click_limit', String(currentClicks), (err) => {
-                        if (err) {
-                           console.error('Ошибка при сохранении', err);
-                         }
-                   });
-             }
-       }, 1000);
-      tabButtons.forEach(button => {
-           button.addEventListener('click', function () {
-              const tabId = this.getAttribute('data-tab');
-              tabButtons.forEach(btn => btn.classList.remove('active'));
-              tabContents.forEach(tab => tab.classList.remove('active'));
-             this.classList.add('active');
-            document.getElementById(tabId).classList.add('active');
-            });
-       });
-      function renderUpgrades(){
-          upgradesContainer.innerHTML = '';
-          upgrades.forEach(upgrade =>{
-              const item = document.createElement('div');
-             item.classList.add('shop-item');
-             item.innerHTML = `
-                <span>${upgrade.name} (Цена: ${upgrade.cost})</span>
-                  <button data-id = "${upgrade.id}" ${upgrade.bought ? 'disabled' : ''} >${upgrade.bought ? 'Куплено' : 'Купить' }</button>
-              `
-           upgradesContainer.appendChild(item);
-          });
-          upgradesContainer.querySelectorAll('button').forEach(button =>{
-                button.addEventListener('click', function(){
-                   const id = parseInt(this.getAttribute('data-id'));
-                     const upgrade = upgrades.find(u => u.id === id);
-                       if (upgrade && count >= upgrade.cost && !upgrade.bought) {
-                           count -= upgrade.cost;
-                          clickMultiplier *= upgrade.multiplier;
-                           upgrade.bought = true;
-                            countDisplay.textContent = count;
-                            renderUpgrades();
-                            saveAndSendData(count);
-                     }
-                 })
-            });
-       }
-         function renderLimitUpgrades(){
-          limitUpgradesContainer.innerHTML = '';
-          limitUpgrades.forEach(upgrade =>{
-              const item = document.createElement('div');
-              item.classList.add('shop-item');
-              item.innerHTML = `
-                  <span>${upgrade.name} (Цена: ${upgrade.cost})</span>
-                  <button data-id = "${upgrade.id}" ${upgrade.bought ? 'disabled' : ''} >${upgrade.bought ? 'Куплено' : 'Купить' }</button>
-                `
-              limitUpgradesContainer.appendChild(item);
-            });
-             limitUpgradesContainer.querySelectorAll('button').forEach(button =>{
-                button.addEventListener('click', function(){
-                     const id = parseInt(this.getAttribute('data-id'));
-                      const upgrade = limitUpgrades.find(u => u.id === id);
-                       if (upgrade && count >= upgrade.cost && !upgrade.bought) {
-                           count -= upgrade.cost;
-                           clickLimit *= upgrade.multiplier;
-                            upgrade.bought = true;
-                            countDisplay.textContent = count;
-                             updateLimitDisplay();
-                            renderLimitUpgrades();
-                            saveAndSendData(count);
-                     }
-                   })
-              });
-        }
-      tg.onEvent('web_app_close', async () =>{
-          if(isSaving){
-             console.log('Сохранение еще не завершено, ждем...');
-             while(isSaving){
-                 await new Promise((resolve) => setTimeout(resolve, 100))
-             }
-              console.log('Сохранение завершено, отправляем счет при закрытии');
-         }
-        while (sendQueue.length > 0) {
-             processSendQueue();
-           await new Promise((resolve) => setTimeout(resolve, 100));
-          }
-            console.log('Отправка данных боту завершена')
         });
+
+        // Ускоритель кликов
+        document.getElementById("clickMultiplierBtn").addEventListener("click", () => {
+            if (clicks >= clickMultiplierPrice) {
+                clicks -= clickMultiplierPrice;
+                clickMultiplierPrice *= 2;
+                clickMultiplier += 1;
+                updateUI();
+            }
+        });
+
+        // Усилитель кол-ва кликов
+        document.getElementById("clickCountMultiplierBtn").addEventListener("click", () => {
+            if (clicks >= clickCountMultiplierPrice) {
+                clicks -= clickCountMultiplierPrice;
+                clickCountMultiplierPrice *= 2;
+                clickCountMultiplier += 1;
+                updateUI();
+            }
+        });
+
+        // Инициализация
+        updateUI();
+        startClickRestoration();
     </script>
 </body>
 </html>
